--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,7 +18,7 @@ body {
     --primary-foreground: 270 50% 98%;
     --secondary: 300 29% 90%;
     --secondary-foreground: 300 10% 20%;
-    --muted: 210 50% 92%; /* Bluish color for navigation */
+    --muted: 240 50% 92%; /* Bluish color with a hint of purple for navigation */
     --muted-foreground: 300 10% 35%;
     --accent: 210 100% 95%; /* Pale Blue */
     --accent-foreground: 210 40% 40%;
